add rspec controller online_pay

--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -1,5 +1,5 @@
 one:
-  system: finance
+  system: mypost4u
   channel: spec_fixtures
   userid: 552b461202d0f099ec000033
   username: spec_username
